--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -1094,7 +1094,8 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 /*====================================================*/
 /*=========== con_about_area ============*/
 .con_about_area {
-  padding-bottom: 120px;
+  padding-bottom: 7.5rem;
+  padding-top: 7.5rem;
   position: relative;
   z-index: 1;
 }
@@ -1585,9 +1586,13 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 .con_testimonial_area {
   position: relative;
   overflow: hidden;
-  background: #000;
+  background: #f9f9f9;
   padding: 130px 0px;
   z-index: 1;
+}
+
+.container_testimonials {
+  background-color: grey;
 }
 
 .con_testimonial_info {
