--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -2378,6 +2378,10 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   margin-left: 45px;
 }
 
+.small-image:hover {
+  cursor: pointer;
+}
+
 .hover_effect {
   position: relative;
   z-index: 1;
@@ -2418,7 +2422,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   -webkit-transition: all 0.6s ease 0s;
   -o-transition: all 0.6s ease 0s;
   transition: all 0.6s ease 0s;
-}
+} 
 
 .portfolio_gallery {
   padding-bottom: 1.88rem;
@@ -2510,6 +2514,22 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   padding-right: 8px;
   margin-bottom: 16px;
 }
+
+/* modal window */
+.modal-window {
+  position: absolute;
+  top:50%;
+  left: 50%;
+  z-index: 1000; /* above all elements */
+  transform: translate(-50%, -50%); /* centers window according to viewport */
+  display:none;
+}
+
+.modal-window-area {
+  max-width: 90%;
+  height: auto;
+}
+
 
 /*============ con_project_area css =============*/
 /*====================================================*/
