--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -45,6 +45,16 @@ Table of Content:
 /*===== color =====*/
 /*====================================================*/
 /*====================================================*/
+html {
+	scroll-behavior: smooth;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
+
 .m0 {
   margin: 0px;
 }
@@ -119,6 +129,10 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   margin-bottom: 5px;
 }
 
+#quote {
+  scroll-behavior: smooth;
+}
+
 .con_title {
   font-size: 2.8rem;
   font-weight: 700;
@@ -167,6 +181,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   padding: 0.75rem 2.88rem;
   font-weight: 500;
   cursor: pointer;
+  scroll-behavior: smooth;
 }
 
 .btn_effect {
