--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -131,6 +131,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 
 #quote {
   scroll-behavior: smooth;
+  background-color: white;
 }
 
 .con_title {
@@ -2111,9 +2112,15 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 
 /*============ con_faq_area css ==========*/
 /*============ con_team_area_two css ==========*/
+.con_team_item_two {
+  width:25rem;
+  margin:auto;
+}
+
 .con_team_item_two .team_img {
   z-index: 0;
   overflow: hidden;
+  width:25rem;
 }
 
 .con_team_item_two .team_img img {
@@ -2122,6 +2129,11 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   transition: all 0.3s linear;
   position: relative;
   z-index: -1;
+  width:25rem;
+}
+
+.owner {
+  justify-content: space-around;
 }
 
 .con_team_item_two .social_icon {
@@ -3529,6 +3541,12 @@ input[type="text"] {
 
 .con_contact_area .map_info .mapBox2 {
   height: 100%;
+}
+
+iframe {
+  width:100%;
+  height: 100%; 
+  border:none;
 }
 
 .contact_info {
