--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -2113,14 +2113,14 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 /*============ con_faq_area css ==========*/
 /*============ con_team_area_two css ==========*/
 .con_team_item_two {
-  width:25rem;
+  width:20rem;
   margin:auto;
 }
 
 .con_team_item_two .team_img {
   z-index: 0;
   overflow: hidden;
-  width:25rem;
+  width:20rem;
 }
 
 .con_team_item_two .team_img img {
@@ -2129,11 +2129,11 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
   transition: all 0.3s linear;
   position: relative;
   z-index: -1;
-  width:25rem;
+  width:20rem;
 }
 
 .owner {
-  justify-content: space-around;
+  justify-content:center;
 }
 
 .con_team_item_two .social_icon {
