finished pricing section

--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -1386,7 +1386,8 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 
 .con_service_area .pricing {
   margin-top:5rem;
-  justify-content:center
+  padding-top:2rem;
+  justify-content:center;
 }
 
 #priceInput:hover{
@@ -1394,7 +1395,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 }
 
 form.price-slider {
-  margin-top: 3rem;
+  margin-top: 4rem;
   padding-top:1rem;
   text-align: center;
   
@@ -1494,8 +1495,9 @@ input[type="range"]::-moz-range-thumb {
   padding-top:0.5rem;
 }
 
-
-
+.truck {
+  width:35rem;
+}
 
 
 /*============= con_service_area css ============*/
