--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -2668,13 +2668,15 @@ input[type="range"]::-moz-range-thumb {
   z-index: 1000; /* above all elements */
   transform: translate(-50%, -50%); /* centers window according to viewport */
   display:none;
-  background-color:rgb(133, 130, 130);
+  background-color:rgb(0, 0, 0);
   width: 35rem;
 }
 
 #close-btn {
-  position: relative;
-  left: 50%;
+  position: absolute;
+  right: right;
+  background-color: black;
+  color:white;
 }
 
 #overlay {
