--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -146,7 +146,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 
 .con_p {
   margin-bottom: 0;
-}
+}color
 
 .line_bottom {
   width: 60px;
@@ -2232,7 +2232,11 @@ input[type="range"]::-moz-range-thumb {
 /*============ con_team_area_two css ==========*/
 .con_team_item_two {
   width:20rem;
-  margin:auto;
+  margin: 0 2rem;
+}
+
+.con_team_item_two .con_p{
+  margin-top: 2rem;
 }
 
 .con_team_item_two .team_img {
