defered style.css

--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -27,7 +27,7 @@ Table of Content:
 =====================================================================*/
 /*====================================================*/
 /*=== fonts ====*/
-@import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:400,500,600,700|Roboto:400,500");
+/* @import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:400,500,600,700|Roboto:400,500"); */
 /*===== color =====*/
 /*====================================================*/
 /*====================================================*/
