--- a/website-docs/css/style.css
+++ b/website-docs/css/style.css
@@ -14,7 +14,7 @@ Table of Content:
 10/ price
 11/ about
 12/ testimonial
-13/ screenshot
+13/ screenshottttttttttttD
 14/ joblist
 15/ faq
 16/ portfolio
@@ -27,7 +27,7 @@ Table of Content:
 =====================================================================*/
 /*====================================================*/
 /*=== fonts ====*/
-/* @import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:400,500,600,700|Roboto:400,500"); */
+@import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:400,500,600,700|Roboto:400,500");
 /*===== color =====*/
 /*====================================================*/
 /*====================================================*/
