--- a/css/style.css
+++ b/css/style.css
@@ -826,7 +826,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 }
 
 .overlay_bg {
-  background-image: url("../img/home-1/2025-pics/banner.jpg");
+  background-image: url("../img/home-1/2025-pics/banner2025.JPG");
   background-color: rgb(133, 130, 130);
   background-blend-mode: multiply;
 }
