--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -59,6 +59,7 @@
             }
             &.slick-active{
                 button{
+                    display: none;
                     background: #fff;
                 }
             }
